# ndarray

./: CMakeLists.txt  Makefile  setup.py
ndarray/: __init__.py  array.py  dtype.py  initializers.py  ndarray.py
ndarray/backend/: bindings.cpp  dtype.cpp  dtype.h  ndarray.cpp  ndarray.h
scripts/: example.py
